--- a/src/app/components/modal/agregar-editar-unidades-productivas/agregar-editar-unidad-productiva.component.html
+++ b/src/app/components/modal/agregar-editar-unidades-productivas/agregar-editar-unidad-productiva.component.html
@@ -108,6 +108,7 @@
 
   <ng-template pTemplate="footer">
     <p-button
+      class="custom-button"
       class="bg-gray-100 rounded-xl py-3 px-2 mr-2"
       (click)="closeModal()"
       label="Cancel"
