--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -7,15 +7,14 @@ body, html {
 
 .body {
     display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100%;
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100vh; 
-    flex-direction: column;
     align-items: center; 
     background: radial-gradient(ellipse 80% 50% at 50% 50%, #fff, #b9d2ef 80%, #8fb9e3 100%);
 }
-
 
 /* Pantallas más pequeñas*/
 .body-trimmed {
