--- a/src/app/pages/unidades-productivas/unidad-productiva.component.html
+++ b/src/app/pages/unidades-productivas/unidad-productiva.component.html
@@ -1,47 +1,78 @@
 <div class="card">
-    <div class="justify-content-between">
-        <div class="h1 bg-gray-500 border-3 border-gray-400">Unidad Productiva</div>
-    </div>
+  <div class="justify-content-between">
+    <div class="table">Unidades Productivas</div>
+  </div>
 
-    <p-table [value]="unidad" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10, 15 ]">
-        <ng-template pTemplate="caption">
-            <p-button class="bg-[#EC6708] rounded-xl text-white py-2 px-2 hover:scale-105 duration-300"  label="Registrar" (click)="showAddModal()"></p-button>
-        </ng-template>
-        <ng-template pTemplate="header">
-            <tr>
-                <th>N°</th>
-                <th>Nombre del estanque</th>
-                <th>Coordenadas</th>
-                <th>Área</th>
-                <th>Profundidad</th>
-                <th>Observaciones</th>
-                <th>Opciones</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-rowIndex="rowIndex" let-unidadP>
-            <tr  class="hover:bg-gray-300 cursor-pointer duration-300">
-                <td class="border-2">{{rowIndex + 1}}</td>
-                <td class="border-2">{{unidadP.unidadP}}</td>
-                <td class="border-2">{{unidadP.coordenadas}}</td>
-                <td class="border-2">{{unidadP.area}}</td>
-                <td class="border-2">{{unidadP.profundidad}} Mts</td>
-                <td class="border-2">{{unidadP.observacion}}</td>
-                <td>
-                    <button pButton icon="pi pi-pencil" class="bg-cyan-600 text-white p-button-rounded mr-2"
-                        (click)="showEdit(unidadP.id)"></button>
-                    <button pButton icon="pi pi-trash" class="bg-red-500 text-white p-button-rounded p-button-danger"
-                        (click)="eliminar(unidadP.id)"></button>
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
+  <p-table
+    [value]="unidad"
+    [paginator]="true"
+    [rows]="10"
+    [rowsPerPageOptions]="[10, 20, 30]"
+  >
+    <ng-template pTemplate="caption">
+        <div class="header-container">      
+            <div class="search-container">
+              <span class="search">
+                <i class="pi pi-search"></i>
+              </span>
+              <input type="text" pInputText placeholder="Buscar unidades productivas" 
+                     [(ngModel)]="filtro" (input)="onFiltroChange($event)">
+            </div>
+            <p-button
+              class="custom-button"
+              label="Registrar una unidad productiva"
+              (click)="showAddModal()"
+            ></p-button>
+        </div>
+    </ng-template>
+    <ng-template pTemplate="header">
+      <tr>
+        <th class="border-2">N°</th>
+        <th class="border-2">Nombre del estanque</th>
+        <th class="border-2">Coordenadas</th>
+        <th class="border-2">Área</th>
+        <th class="border-2">Profundidad</th>
+        <th class="border-2">Observaciones</th>
+        <th class="border-2">Estado</th>
+        <th class="border-2">Opciones</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowIndex="rowIndex" let-unidadP>
+      <tr class="hover:bg-gray-300 cursor-pointer duration-300">
+        <td class="border-2">{{ rowIndex + 1 }}</td>
+        <td class="border-2">{{ unidadP.unidadP }}</td>
+        <td class="border-2">{{ unidadP.coordenadas }}</td>
+        <td class="border-2">{{ unidadP.area }}</td>
+        <td class="border-2">{{ unidadP.profundidad }} Mts</td>
+        <td class="border-2">{{ unidadP.observacion }}</td>
+        <td class="border-2">{{ verEstado(unidadP.estado) }}</td>
+        <td class="border-2">
+          <div class="option">
+          <button
+            pButton
+            icon="pi pi-pencil"
+            class="edit"
+            (click)="showEdit(unidadP.id)"
+          ></button>
+          <button
+            pButton
+            icon="pi pi-trash"
+            class="delete"
+            (click)="eliminar(unidadP.id)"
+          ></button>
+          </div>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
 
-
-    <app-add-edit-unidadp 
-    *ngIf="displayAddEditModal" [displayAddEditModal]="displayAddEditModal"
-    [selectedUnidadP]="selectedUnidadP" 
+  <app-agregar-editar-unidad
+    *ngIf="displayAddEditModal"
+    [displayAddEditModal]="displayAddEditModal"
+    [selectedUnidadP]="selectedUnidad"
     (clickClose)="hideAddModal($event)"
-    (clickAddEdit)="guardar_editarUnidadPList($event)"></app-add-edit-unidadp>
-    <p-confirmDialog header="Delete"></p-confirmDialog>
-    <p-toast position="bottom-right"></p-toast>
+    (clickAddEdit)="guardar_editarUnidadList($event)"
+  ></app-agregar-editar-unidad>
+  <p-confirmDialog header="Delete"></p-confirmDialog>
+  <p-toast position="bottom-right"></p-toast>
 </div>
