--- a/src/app/components/modal/agregar-editar-unidades-productivas/agregar-editar-unidad-productiva.component.html
+++ b/src/app/components/modal/agregar-editar-unidades-productivas/agregar-editar-unidad-productiva.component.html
@@ -1,123 +1,56 @@
-<p-dialog
-  header="{{ modalType }} Unidad Productiva"
-  [(visible)]="displayAddEditModal"
-  [modal]="true"
-  [draggable]="false"
-  [resizable]="false"
-  (onHide)="closeModal()"
->
+<p-dialog header="{{ modalType }} Unidad Productiva" [(visible)]="displayAddEditModal" [modal]="true"
+  [draggable]="false" [resizable]="false" (onHide)="closeModal()">
   <form [formGroup]="unidadPForm" class="unidadP-form">
     <div class="row">
       <div class="field">
-        <label class="block" for="unidadP">Nombre del estanque</label>
-        <input
-          class="p-2 rounded-xl border border border-gray-500"
-          type="text"
-          pInputText
-          id="unidadP"
-          formControlName="unidadP"
-        />
-        <small
-          class="p-error block"
-          *ngIf="
-            unidadPForm.controls['unidadP'].invalid &&
-            unidadPForm.controls['unidadP'].dirty
-          "
-          >Campo requerido *</small
-        >
+        <label class="block" for="unidadP">Nombre de la unidad productiva</label>
+        <input id="unidadP" class="p-2 rounded-xl border border border-gray-500" type="text" pInputText 
+          formControlName="unidadP" placeholder="Ingrese una unidad productiva" />
+          <small class="p-error block" *ngIf="unidadPForm.controls['unidadP'].invalid &&
+            (unidadPForm.controls['unidadP'].dirty || unidadPForm.controls['unidadP'].touched)"> Campo requerido *
+        </small>
       </div>
       <div class="field">
         <label class="block" for="coordenadas">Coordenadas</label>
-        <input
-          class="p-2 rounded-xl border border border-gray-500"
-          type="text"
-          pInputText
-          id="coordenadas"
-          formControlName="coordenadas"
-          (keypress)="onKeyPress($event)"
-        />
-        <small
-          class="p-error block"
-          *ngIf="
-            unidadPForm.controls['coordenadas'].invalid &&
-            unidadPForm.controls['coordenadas'].dirty
-          "
-          >Campo requerido *</small
-        >
+        <input id="coordenadas" class="p-2 rounded-xl border border border-gray-500" type="text" pInputText 
+          formControlName="coordenadas" placeholder="Ingrese unas coordenadas" />
+          <small class="p-error block" *ngIf="unidadPForm.controls['coordenadas'].invalid &&
+            (unidadPForm.controls['coordenadas'].dirty || unidadPForm.controls['coordenadas'].touched)"> Campo requerido *
+        </small>
       </div>
     </div>
     <div class="row">
       <div class="field">
         <label class="block" for="area">Área</label>
-        <input
-          class="p-2 rounded-xl border border border-gray-500"
-          type="text"
-          pInputText
-          id="area"
-          formControlName="area"
-          (keypress)="onKeyPress($event)"
-        />
-        <small
-          class="p-error block"
-          *ngIf="
-            unidadPForm.controls['area'].invalid &&
-            unidadPForm.controls['area'].dirty
-          "
-          >Campo requerido *</small
-        >
+        <input id="area" class="p-2 rounded-xl border border border-gray-500" type="text" 
+        pInputText formControlName="area" placeholder="Ingrese un área"/>
+        <small class="p-error block" *ngIf="unidadPForm.controls['area'].invalid &&
+          (unidadPForm.controls['area'].dirty || unidadPForm.controls['area'].touched)"> Campo requerido *
+        </small>
       </div>
       <div class="field">
         <label class="block" for="profundidad">Profundidad</label>
-        <input
-          class="p-2 rounded-xl border border border-gray-500"
-          type="text"
-          pInputText
-          id="profundidad"
-          formControlName="profundidad"
-          (keypress)="onKeyPress($event)"
-        />
-        <small
-          class="p-error block"
-          *ngIf="
-            unidadPForm.controls['profundidad'].invalid &&
-            unidadPForm.controls['profundidad'].dirty
-          "
-          >Campo requerido *</small
-        >
+        <input id="profundidad" class="p-2 rounded-xl border border border-gray-500" type="text" pInputText 
+          formControlName="profundidad" placeholder="Ingrese una profundidad" />
+          <small class="p-error block" *ngIf="unidadPForm.controls['profundidad'].invalid &&
+            (unidadPForm.controls['profundidad'].dirty || unidadPForm.controls['profundidad'].touched)"> Campo requerido *
+        </small>
       </div>
     </div>
     <div class="field">
       <label class="block" for="observacion">Observaciones</label>
-      <textarea
-        class="p-2 rounded-xl border border border-gray-500"
-        rows="5"
-        cols="30"
-        pInputTextarea
-        formControlName="observacion"
-      ></textarea>
-      <small
-        class="p-error block"
-        *ngIf="
-          unidadPForm.controls['observacion'].invalid &&
-          unidadPForm.controls['observacion'].dirty
-        "
-        >Campo requerido *</small
-      >
+      <textarea id="observacion" class="p-2 rounded-xl border border border-gray-500" rows="5" cols="30" pInputTextarea
+        formControlName="observacion" placeholder="Ingrese cualquier observacion acerca de la unidad productiva" >
+      </textarea>
+        <small class="p-error block" *ngIf="unidadPForm.controls['area'].invalid &&
+          (unidadPForm.controls['observacion'].dirty || unidadPForm.controls['observacion'].touched)"> Campo requerido *
+      </small>
     </div>
   </form>
 
   <ng-template pTemplate="footer">
-    <p-button
-      class="custom-button"
-      class="bg-gray-100 rounded-xl py-3 px-2 mr-2"
-      (click)="closeModal()"
-      label="Cancel"
-      styleClass="p-button-text"
-    ></p-button>
-    <p-button
-      (click)="agregarEditarUnidadP()"
-      label="{{ modalType }}"
-      [disabled]="unidadPForm.invalid"
-    ></p-button>
+    <p-button class="custom-button" class="bg-gray-100 rounded-xl py-3 px-2 mr-2" (click)="closeModal()" label="Cancel"
+      styleClass="p-button-text"></p-button>
+    <p-button (click)="agregarEditarUnidadP()" label="{{ modalType }}" [disabled]="unidadPForm.invalid"></p-button>
   </ng-template>
 </p-dialog>
