--- a/src/app/pages/usuarios/usuario.component.css
+++ b/src/app/pages/usuarios/usuario.component.css
@@ -1,30 +1,109 @@
-.h1 {
-  padding: 1rem 1.5rem;
-  font-size: 2rem;
-  font-weight: 600;
-  text-align: center;
-  color: #000000;
-  
-  border-radius: 5px;
-}
-
 .card {
   margin: 0;
   padding: 0;
   width: 150vh;
-  height: 100vh; 
+  height: auto;
 }
 
-p-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  border: 1px solid #ddd;
+.table {
+  width: 100%;
+  padding: 1rem 1.5rem;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  color: #fafafa;
+  background-color: #2d44f3;
+  border-radius: 5px;
 }
 
-th{
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.1rem;
+}
+
+.search {
+  padding: 0.5rem;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  margin-right: 25rem;
+}
+
+.search-container input {
+  width: 250px;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid #000000;
+}
+
+.custom-button {
+  background-color: #036927;
+  border-radius: 0.75rem;
+  color: white;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.custom-button:hover {
+  background-color: #022d11;
+  transform: scale(1.05);
+}
+
+
+.custom-button {
+  background-color: #036927;
+  border-radius: 0.75rem;
+  color: white;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.custom-button:hover {
+  background-color: #022d11;
+  transform: scale(1.05);
+}
+
+.option {
+  display: flex;  
+  justify-content: center;
+}
+
+.edit {
+  background-color: #b4a21a;
+  border-radius: 0.75rem;
+  color: white;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  margin-right: 1rem; 
+}
+
+.delete {
+  background-color: #ad0c0c;
+  border-radius: 0.75rem;
+  color: white;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  margin-left: 1rem; 
+}
+
+.edit:hover, .delete:hover {
+  background-color: #040456;
+  transform: scale(1.05);
+}
+
+th {
   text-align: center;
 }
 
-td{
+td {
   text-align: center;
+}
+
+.resaltado {
+  background-color: yellow;
+  font-weight: bold;
 }
