--- a/src/app/pages/usuarios/usuario.component.html
+++ b/src/app/pages/usuarios/usuario.component.html
@@ -1,66 +1,54 @@
 <div class="card">
   <div class="justify-content-between">
-    <div class="h1 bg-gray-500 border-3 border-gray-400">Usuarios</div>
+    <div class="table">Usuarios</div>
   </div>
-  <p-table
-    [value]="usuario"
-    [paginator]="true"
-    [rows]="5"
-    [rowsPerPageOptions]="[5, 10, 15]"
-  >
+  <p-table [value]="usuario" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 20, 30]">
     <ng-template pTemplate="caption">
-      <p-button
-        class="bg-[#EC6708] rounded-xl text-white py-2 px-2 hover:scale-105 duration-300"
-        label="Registrar"
-        (click)="showAddModal()"
-      ></p-button>
+      <div class="header-container">
+        <div class="search-container">
+          <span class="search">
+            <i class="pi pi-search"></i>
+          </span>
+          <input type="text" pInputText placeholder="Buscar usuarios" [(ngModel)]="filtro"
+            (input)="onFiltroChange($event)" />
+        </div>
+        <p-button class="custom-button" label="Registrar un usuario" (click)="showAddModal()"></p-button>
+      </div>
     </ng-template>
+
     <ng-template pTemplate="header">
-      <tr>
-        <th>N°</th>
-        <th>Usuario</th>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Teléfono</th>
-        <th>Correo</th>
-        <th>Rol</th>
-        <th>Opciones</th>
+      <tr class="border-2 border-gray-300 w-6/12">
+        <th class="border-2">N°</th>
+        <th class="border-2">Usuario</th>
+        <th class="border-2">Nombre</th>
+        <th class="border-2">Apellido</th>
+        <th class="border-2">Teléfono</th>
+        <th class="border-2">Correo</th>
+        <th class="border-2">Rol</th>
+        <th class="border-2">Opciones</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-rowIndex="rowIndex" let-usuario>
-      <tr>
-        <td>{{ rowIndex + 1 }}</td>
-        <td>{{ usuario.usuario }}</td>
-        <td>{{ usuario.nombre }}</td>
-        <td>{{ usuario.apellido }}</td>
-        <td>{{ usuario.telefono }}</td>
-        <td>{{ usuario.email }}</td>
-        <td>{{ usuario.rol.name }}</td>
-        <td>
-          <button
-            pButton
-            icon="pi pi-pencil"
-            class="bg-cyan-600 text-white p-button-rounded mr-2"
-            (click)="showEdit(usuario.id)"
-          ></button>
-          <button
-            pButton
-            icon="pi pi-trash"
-            class="bg-red-500 text-white p-button-rounded p-button-danger"
-            (click)="eliminar(usuario.id)"
-          ></button>
+      <tr class="hover:bg-gray-300 cursor-pointer duration-300">
+        <td class="border-2">{{ rowIndex + 1 }}</td>
+        <td class="border-2">{{ usuario.usuario }}</td>
+        <td class="border-2">{{ usuario.nombre }}</td>
+        <td class="border-2">{{ usuario.apellido }}</td>
+        <td class="border-2">{{ usuario.telefono }}</td>
+        <td class="border-2">{{ usuario.email }}</td>
+        <td class="border-2">{{ usuario.rolName }}</td>
+        <td class="border-2">
+          <div class="option">
+            <button pButton icon="pi pi-pencil" class="edit" (click)="showEdit(usuario.id)"></button>
+            <button pButton icon="pi pi-trash" class="delete" (click)="eliminarUsuario(usuario.id)"></button>
+          </div>
         </td>
       </tr>
     </ng-template>
   </p-table>
-
-  <app-agregar-editar-usuario
-    *ngIf="displayAddEditModal"
-    [displayAddEditModal]="displayAddEditModal"
-    [selectedUsuario]="selectedUsuario"
-    (clickClose)="hideAddModal($event)"
-    (clickAddEdit)="guardar_editarUsuarioList($event)"
-  ></app-agregar-editar-usuario>
+  <app-agregar-editar-usuario *ngIf="displayAddEditModal" [displayAddEditModal]="displayAddEditModal"
+    [selectedUsuario]="selectedUsuario" (clickClose)="hideAddModal($event)"
+    (clickAddEdit)="agregarEditarUsuario($event)"></app-agregar-editar-usuario>
   <p-confirmDialog header="Delete"></p-confirmDialog>
   <p-toast position="bottom-right"></p-toast>
 </div>
